@@ -1,6 +1,7 @@
 v7.10.0
   - Projects sorting by last commit date
   - Add project search at runner page
+  - Ability to run deploy job without test jobs (every push will trigger deploy job)
 
 v7.9.1
   - [Security] Adding explicit is_shared parameter to runner
